Zaktualizuj 'project/Aki.Launcher/Aki_Data/Launcher/Locales/Polish.json'

--- a/project/Aki.Launcher/Aki_Data/Launcher/Locales/Polish.json
+++ b/project/Aki.Launcher/Aki_Data/Launcher/Locales/Polish.json
@@ -13,7 +13,7 @@
     "edit_account_update_error": "Wystąpił problem podczas aktualizacji profilu.",
     "register": "Zarejestruj",
     "go_to_register": "Przejdź do rejestracji",
-    "login_or_register": "Zaloguj się / Zarejestruj",
+    "login_or_register": "Zaloguj / Zarejestruj",
     "go_to_login": "Przejdź do logowania",
     "login_automatically": "Automatyczne logowanie",
     "incorrect_login": "Nazwa użytkownika lub hasło są niepoprawne.",
