Updated English locales

--- a/project/SPT.Launcher/SPT_Data/Launcher/Locales/English.json
+++ b/project/SPT.Launcher/SPT_Data/Launcher/Locales/English.json
@@ -3,8 +3,8 @@
   "native_name": "English",
   "retry": "Retry",
   "server_connecting": "Connecting",
-  "server_unavailable_format_1": "No server available at: '{0}' to connect to\nEnsure you have run 'SPT.Server.exe' first",
-  "no_servers_available": "No Servers found. Check server list in settings.",
+  "server_unavailable_format_1": "No server available at: '{0}' to connect to\nEnsure you have run 'SPT.Server.exe' first.",
+  "no_servers_available": "No SPT Servers found. Ensure your SPT sever is running and check the server URL is correct in the settings page.",
   "settings_menu": "Settings",
   "back": "Back",
   "wipe_profile": "Wipe Profile",
@@ -26,8 +26,8 @@
   "edit_account": "Edit Profile",
   "start_game": "Start Game",
   "installed_in_live_game_warning": "SPT shouldn't be installed into the live game directory. Please install SPT into a copy of the game directory elsewhere on your computer.",
-  "no_official_game_warning": "Escape From Tarkov isn't installed on your computer. Please buy a copy of the game and support the developers!",
-  "eft_exe_not_found_warning": "EscapeFromTarkov.exe not found at game path. Please check that the directory is correct.",
+  "no_official_game_warning": "Escape From Tarkov isn't installed on your computer. Ensure your BSG launcher can start the game before starting SPT.",
+  "eft_exe_not_found_warning": "EscapeFromTarkov.exe not found at game path. Please check that the folder you installed SPT into has this file.",
   "account_exist": "Profile already exists",
   "url": "URL",
   "default_language": "Default Language",
@@ -57,13 +57,13 @@
   "failed_core_patch": "Core patch failed",
   "failed_mod_patch": "Mod patch failed",
   "ok": "OK",
-  "account_page_denied": "Profile page denied. Either you are not logged in or the game is running.",
+  "account_page_denied": "You cannot access the settings page when the game is running or not logged in.",
   "account_updated": "Your profile has been updated",
   "nickname": "Nickname",
   "side": "Side",
   "level": "Level",
   "patching": "Patching",
-  "file_mismatch_dialog_message": "We noticed your EFT files do not match what we expected to see for SPT: {0}\nPlease check you have the latest version of EFT installed\nIf not, delete SPT, update live EFT and run the Installer in an empty folder again\n\nAre you sure you want to proceed?",
+  "file_mismatch_dialog_message": "Your EFT files do not match what was expected for SPT: {0}\nCheck you have the latest version of EFT installed\nIf not, delete SPT, update live EFT and run the Installer in an empty folder again\n\nAre you sure you want to proceed?",
   "yes": "Yes",
   "no": "No",
   "open_folder": "Open Folder",
@@ -71,7 +71,7 @@
   "profile_created": "Profile Created",
   "registration_question_format_1": "Profile '{0}' does not exist.\n\nWould you like to create it?",
   "next_level_in": "Next level in",
-  "wipe_warning": "Changing your account edition requires a profile wipe. This will reset your game progress.",
+  "wipe_warning": "Changing your account edition requires a profile wipe. This will reset your profile.",
   "copied": "Copied",
   "no_profile_data": "No profile data",
   "profile_version_mismath": "Your profile was made using a different version of SPT and may have issues",
@@ -79,14 +79,14 @@
   "profile_removal_failed": "Failed to remove profile",
   "profile_remove_question_format_1": "Permanently remove profile '{0}'?",
   "i_understand": "I Understand",
-  "game_version_mismatch_format_2": "SPT is unable to run, this is because SPT expected to find EFT version '{1}',\nbut instead found version '{0}'\n\nEnsure you've downgraded your EFT as described in the install guide\non the page you downloaded SPT from",
+  "game_version_mismatch_format_2": "SPT is unable to run because SPT expected to find EFT version: '{1}',\nbut instead found version: '{0}'\n\nEnsure you've downgraded your EFT as described in the install guide\non the page you downloaded SPT from",
   "description": "Description",
   "author": "Author",
   "load_live_settings": "Load Live Settings",
   "load_live_settings_succeeded": "Game settings copied from live",
   "load_live_settings_failed": "Failed to copy live settings",
   "wipe_on_start": "Wipe profile on game start",
-  "copy_live_settings_question": "Would you like to copy your live game settings to spt",
+  "copy_live_settings_question": "Would you like to copy your live game settings to SPT?",
   "mod_not_in_server_warning": "This mod was found in your profile, but is not loaded on the server",
   "active_server_mods": "Active Server Mods",
   "active_server_mods_info_text": "These mods are currently running on the server",
