--- a/project/SPT.Launcher/SPT_Data/Launcher/Locales/Chinese (Traditional).json
+++ b/project/SPT.Launcher/SPT_Data/Launcher/Locales/Chinese (Traditional).json
@@ -95,5 +95,6 @@
   "open_link_question_format_1": "Are you sure you want to open the following link: \n{0}",
   "open_link": "Open Link",
   "dev_mode": "Developer Mode",
-  "failed_to_save_settings": "Failed to save settings"
+  "failed_to_save_settings": "Failed to save settings",
+  "core_dll_file_version_mismatch": "Your BepinEx/plugins/spt/spt-core.dll file version doesn't match what was expected and is unable to start. Try reinstalling SPT"
 }
