--- a/project/SPT.Launcher/SPT_Data/Launcher/Locales/Russian.json
+++ b/project/SPT.Launcher/SPT_Data/Launcher/Locales/Russian.json
@@ -95,5 +95,6 @@
   "open_link_question_format_1": "Вы уверены, что хотите открыть следующую ссылку? \n{0}",
   "open_link": "Открыть ссылку",
   "dev_mode": "Developer Mode",
-  "failed_to_save_settings": "Failed to save settings"
+  "failed_to_save_settings": "Failed to save settings",
+  "register_failed_name_limit": "name cannot exceed 15 characters"
 }
