--- a/project/SPT.Launcher/SPT_Data/Launcher/Locales/Turkish.json
+++ b/project/SPT.Launcher/SPT_Data/Launcher/Locales/Turkish.json
@@ -95,5 +95,6 @@
   "open_link_question_format_1": "Aşağıdaki bağlantıyı açmak istediğinizden emin misiniz? \n{0}",
   "open_link": "Bağlantıyı Aç",
   "dev_mode": "Developer Mode",
-  "failed_to_save_settings": "Failed to save settings"
+  "failed_to_save_settings": "Failed to save settings",
+  "register_failed_name_limit": "name cannot exceed 15 characters"
 }
