feat: Add auto-launch game feature
- Add AutoLaunchGame and AutoLaunchDelay settings to LauncherSettingsProvider
- Add UI controls in Settings view with proper localization
- Implement auto-launch logic in ProfileViewModel with configurable delay
- Add localization support for all languages (English, Russian, etc.)
- Preserve existing functionality and maintain code style
- Auto-launch triggers after successful authentication with user-defined delay

--- a/project/SPT.Launcher/SPT_Data/Launcher/Locales/Russian.json
+++ b/project/SPT.Launcher/SPT_Data/Launcher/Locales/Russian.json
@@ -95,6 +95,8 @@
   "open_link_question_format_1": "Вы уверены, что хотите открыть следующую ссылку? \n{0}",
   "open_link": "Открыть ссылку",
   "dev_mode": "Режим разработчика",
+  "auto_launch_game": "Автоматически запускать игру после авторизации",
+  "auto_launch_delay": "Задержка (сек)",
   "failed_to_save_settings": "Не удалось сохранить настройки",
   "core_dll_file_version_mismatch": "Версия файла BepinEx/plugins/spt/spt-core.dll не совпадает с ожидаемой версией, из-за чего запуск невозможен. Попытайтесь переустановить SPT",
   "register_failed_name_limit": "длина имени не может превышать 15 символов",
