--- a/project/SPTarkov.Core/SPT_Data/Launcher/Locales/English.json
+++ b/project/SPTarkov.Core/SPT_Data/Launcher/Locales/English.json
@@ -6,6 +6,7 @@
   "mod_loader": "Mod Loader",
   "settings": "Settings",
   "info": "Info",
+  "request_timed_out": "Request Timed out!",
   "home_add_server": "Add New Server",
   "home_add_server_cta": "Please Add a server using the \"Add New Server\" button above.",
   "server_card_protect": "Protected from edits",
@@ -32,5 +33,86 @@
   "profiles_connect_warning": "Please connect to a Server first!",
   "setting_close": "Close To Tray",
   "setting_minimize": "Minimize On Game Start",
-  "setting_always_top": "Always On Top"
+  "setting_always_top": "Always On Top",
+  "game_helper_error_1": "SPT is installed in Live",
+  "game_helper_error_2": "Core dll mismatch",
+  "game_helper_error_3": "Game Validation Failed",
+  "game_helper_error_4": "Patching failed",
+  "game_helper_error_5": "Could not find EscapeFromTarkov.exe",
+  "game_helper_error_6": "Starting game process failed",
+  "info_card_name": "Name",
+  "info_card_desc": "Description",
+  "profile_card_name": "Name",
+  "profile_card_level": "Level",
+  "profile_card_edition": "Edition",
+  "profile_card_id": "ID",
+  "profile_card_password": "Password Protected",
+  "profile_card_login": "Login to this profile",
+  "profile_card_logout": "Logout of this profile",
+  "profile_card_invalid": "Profile is marked as Invalid",
+  "profile_card_edit": "Edit this profile",
+  "profile_card_delete": "Delete this profile",
+  "setting_option_background": "Use Background Image",
+  "setting_option_language": "Language",
+  "setting_load_live": "Load Live Settings",
+  "setting_clear_game": "Clear Game Settings",
+  "setting_clean_temp": "Clean Temp Files",
+  "setting_copy_logs": "Copy Logs",
+  "setting_clear_api": "Clear ApiKey",
+  "setting_load_live_error_1": "Settings can not be loaded from live",
+  "setting_load_live_error_2": "Loading live settings failed",
+  "setting_load_live_success": "Loaded live settings",
+  "setting_clear_game_error_1": "Clearing game settings failed due to Unauthorized Access",
+  "setting_clear_game_error_2": "Clearing game settings failed",
+  "setting_clear_game_success": "Cleared game settings",
+  "setting_clean_temp_error_1": "Unable to clean temp files due to Unauthorized Access",
+  "setting_clean_temp_error_2": "Unable to clean temp files",
+  "setting_clean_temp_success": "Cleaned temp files",
+  "setting_copy_logs_error_1": "Unable to set clipboard with logs",
+  "setting_copy_logs_success": "Copied logs to clipboard",
+  "setting_clear_api_error_1": "Unable to logout of Forge API",
+  "setting_clear_api_success": "Successfully logged out of Forge API",
+  "profile_add_edition": "Edition",
+  "profile_add_name": "Name",
+  "profile_add_confirm": "Add",
+  "profile_add_cancel": "Cancel",
+  "profile_add_task_1": "Adding profile details to server",
+  "profile_add_task_default": "Error connecting to server!",
+  "profile_add_task_success": "Added profile",
+  "profile_add_task_fail": "Failed adding profile details to server",
+  "profile_edit_username": "Username",
+  "profile_edit_old_pass": "Old password",
+  "profile_edit_new_pass": "New password",
+  "profile_edit_confirm": "Confirm",
+  "profile_edit_cancel": "Cancel",
+  "profile_edit_task_1": "Changing password with server",
+  "profile_edit_task_default": "Error changing password!",
+  "profile_edit_task_success": "Changed password to",
+  "profile_edit_task_fail": "Failed to change password with server",
+  "profile_login_username": "Username",
+  "profile_login_confirm": "Login",
+  "profile_login_cancel": "Cancel",
+  "profile_login_task_1": "Getting profile details from server",
+  "profile_login_task_default": "Error connecting to server!",
+  "profile_login_task_success": "Logged in to",
+  "profile_login_task_fail": "Failed getting profile details from server",
+  "profile_remove_text": "Do you really want to delete this Profile? This process cannot be undone.",
+  "profile_remove_confirm": "Delete",
+  "profile_remove_cancel": "Cancel",
+  "profile_remove_task_1": "Deleting profile details from server",
+  "profile_remove_task_default": "Failed deleting profile details from server",
+  "profile_remove_task_success": "Deleted profile",
+  "profile_remove_task_fail": "Error deleting profile from server!",
+  "server_add_name": "Name",
+  "server_add_address": "Address",
+  "server_add_required": "IP is required!",
+  "server_add_confirm": "Add",
+  "server_add_cancel": "Cancel",
+  "server_add_success": "Added Server!",
+  "server_edit_name": "Name",
+  "server_edit_address": "Address",
+  "server_edit_required": "IP is required!",
+  "server_edit_confirm": "Confirm",
+  "server_edit_cancel": "Cancel",
+  "server_edit_success": "Edited Server!"
 }
