copy over local keys to other languages

--- a/project/SPTarkov.Core/SPT_Data/Launcher/Locales/English.json
+++ b/project/SPTarkov.Core/SPT_Data/Launcher/Locales/English.json
@@ -114,5 +114,30 @@
   "server_edit_required": "IP is required!",
   "server_edit_confirm": "Confirm",
   "server_edit_cancel": "Cancel",
-  "server_edit_success": "Edited Server!"
+  "server_edit_success": "Edited Server!",
+  "server_login_default": "Error connecting to server!",
+  "server_login_cancel": "Cancel",
+  "server_login_success": "Logged in to",
+  "server_login_fail": "Failed logging in to server",
+  "server_login_task_1": "Checking connection to server",
+  "server_login_task_2": "Getting profiles from server",
+  "server_login_task_3": "Getting profile creation data from server",
+  "server_login_task_4": "Getting active mod list from server",
+  "server_login_task_fail_1": "Error getting profiles from server!",
+  "server_login_task_fail_2": "Error getting profile creation data!",
+  "server_login_task_fail_3": "Error getting mod list from server!",
+  "server_login_task_success": "Connected to server!",
+  "server_remove_text": "Do you really want to delete this server? This process cannot be undone.",
+  "server_remove_confirm": "Delete",
+  "server_remove_cancel": "Cancel",
+  "server_remove_submit": "Server removed!",
+  "forge_page_coming": "Forge is coming soon!",
+  "mod_page_coming": "Mod Loader is coming soon!",
+  "profile_page_task_1": "Checking Install",
+  "profile_page_task_1_fail": "Game check failed",
+  "profile_page_task_2": "Patching Game",
+  "profile_page_task_2_fail": "Failed to Patch game",
+  "profile_page_task_3": "Launching Game",
+  "profile_page_task_3_fail": "Game Failed to start",
+  "profile_page_game_closed": "Game has closed"
 }
