remove hub from keys, add chinese simplified

--- a/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Chinese (Simplified).json
+++ b/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Chinese (Simplified).json
@@ -1,142 +1,142 @@
 {
   "ietf_tag": "zh-hans",
   "native_name": "简体中文",
-  "page_not_found": "Page not found!",
-  "home": "Home",
-  "mod_loader": "Mod Loader",
-  "settings": "Settings",
-  "info": "Info",
-  "home_add_server": "Add New Server",
-  "home_add_server_cta": "Please Add a server using the \"Add New Server\" button above.",
-  "server_card_protect": "Protected from edits",
-  "server_card_edit": "Edit Server",
-  "server_card_name": "Name:",
-  "server_card_address": "Address:",
-  "server_card_connected": "Connected",
-  "server_card_disconnected": "Disconnected",
-  "server_card_login": "Login to server",
-  "server_card_logout": "Logout of server",
-  "server_card_delete": "Delete server",
-  "info_hub_desc": "The current home of SPT",
-  "info_forge_desc": "The greatest resource available for Single Player Tarkov modifications.",
-  "info_github_desc": "The Github for all SPT related Repositries",
-  "info_discord_desc": "The SPT Discord",
+  "page_not_found": "找不到页面!",
+  "home": "家",
+  "mod_loader": "模组加载器",
+  "settings": "设置",
+  "info": "信息",
+  "home_add_server": "添加新服务器",
+  "home_add_server_cta": "请使用上面的\"添加新服务器\"按钮添加服务器",
+  "server_card_protect": "禁止编辑",
+  "server_card_edit": "编辑服务器",
+  "server_card_name": "姓名:",
+  "server_card_address": "地址:",
+  "server_card_connected": "已连接",
+  "server_card_disconnected": "已断开连接",
+  "server_card_login": "登录服务器",
+  "server_card_logout": "注销服务器",
+  "server_card_delete": "删除服务器",
+  "info_forge_desc": "单人塔科夫修改可用的最丰富的资源.",
+  "info_github_desc": "所有 SPT 相关存储库的 Github",
+  "info_discord_desc": "SPT Discord",
   "info_wiki_desc": "Escape From Tarkov Wiki",
   "info_changelog_desc": "Wiki Changelog",
-  "profile_logout": "Logout of Profile",
-  "profile_start_game": "Start Game",
-  "profiles_disconnect": "Disconnect from server",
-  "profiles_create": "Create new profile",
-  "profiles_login": "Login with details",
-  "profiles_empty_warning": "Server has no profiles yet or does not show them. Please create a new profile or login with details.",
-  "profiles_connect_warning": "Please connect to a Server first!",
-  "setting_close": "Close To Tray",
-  "setting_minimize": "Minimize On Game Start",
-  "setting_always_top": "Always On Top",
-  "game_helper_error_1": "SPT is installed in Live",
-  "game_helper_error_2": "Core dll mismatch",
-  "game_helper_error_3": "Game Validation Failed",
-  "game_helper_error_4": "Patching failed",
-  "game_helper_error_5": "Could not find EscapeFromTarkov.exe",
-  "game_helper_error_6": "Starting game process failed",
-  "info_card_name": "Name",
-  "info_card_desc": "Description",
-  "profile_card_name": "Name",
-  "profile_card_level": "Level",
-  "profile_card_edition": "Edition",
+  "info_translations": "翻译有问题吗？请在 GitHub 上提交更正请求。",
+  "profile_logout": "注销个人资料",
+  "profile_start_game": "开始游戏",
+  "profiles_disconnect": "与服务器断开连接",
+  "profiles_create": "创建新的个人资料",
+  "profiles_login": "使用详细信息登录",
+  "profiles_empty_warning": "服务器尚无个人资料或未显示个人资料. 请创建新个人资料或使用详细信息登录.",
+  "profiles_connect_warning": "请先连接到服务器!",
+  "setting_close": "靠近托盘",
+  "setting_minimize": "游戏开始时最小化",
+  "setting_always_top": "始终处于领先地位",
+  "game_helper_error_1": "SPT 安装在 Live 中",
+  "game_helper_error_2": "核心 dll 不匹配",
+  "game_helper_error_3": "游戏验证失败",
+  "game_helper_error_4": "修补失败",
+  "game_helper_error_5": "找不到 EscapeFromTarkov.exe",
+  "game_helper_error_6": "启动游戏失败",
+  "info_card_name": "姓名",
+  "info_card_desc": "描述",
+  "profile_card_name": "姓名",
+  "profile_card_level": "等级",
+  "profile_card_edition": "版",
   "profile_card_id": "ID",
-  "profile_card_password": "Password Protected",
-  "profile_card_login": "Login to this profile",
-  "profile_card_logout": "Logout of this profile",
-  "profile_card_invalid": "Profile is marked as Invalid",
-  "profile_card_edit": "Edit this profile",
-  "profile_card_delete": "Delete this profile",
-  "setting_option_background": "Use Background Image",
-  "setting_option_language": "Language",
-  "setting_load_live": "Load Live Settings",
-  "setting_clear_game": "Clear Game Settings",
-  "setting_clean_temp": "Clean Temp Files",
-  "setting_copy_logs": "Copy Logs",
-  "setting_clear_api": "Clear ApiKey",
-  "setting_load_live_error_1": "Settings can not be loaded from live",
-  "setting_load_live_error_2": "Loading live settings failed",
-  "setting_load_live_success": "Loaded live settings",
-  "setting_clear_game_error_1": "Clearing game settings failed due to Unauthorized Access",
-  "setting_clear_game_error_2": "Clearing game settings failed",
-  "setting_clear_game_success": "Cleared game settings",
-  "setting_clean_temp_error_1": "Unable to clean temp files due to Unauthorized Access",
-  "setting_clean_temp_error_2": "Unable to clean temp files",
-  "setting_clean_temp_success": "Cleaned temp files",
-  "setting_copy_logs_error_1": "Unable to set clipboard with logs",
-  "setting_copy_logs_success": "Copied logs to clipboard",
-  "setting_clear_api_error_1": "Unable to logout of Forge API",
-  "setting_clear_api_success": "Successfully logged out of Forge API",
-  "profile_add_edition": "Edition",
-  "profile_add_name": "Name",
-  "profile_add_confirm": "Add",
-  "profile_add_cancel": "Cancel",
-  "profile_add_task_1": "Adding profile details to server",
-  "profile_add_task_default": "Error connecting to server!",
-  "profile_add_task_success": "Added profile",
-  "profile_add_task_fail": "Failed adding profile details to server",
-  "profile_edit_username": "Username",
-  "profile_edit_old_pass": "Old password",
-  "profile_edit_new_pass": "New password",
-  "profile_edit_confirm": "Confirm",
-  "profile_edit_cancel": "Cancel",
-  "profile_edit_task_1": "Changing password with server",
-  "profile_edit_task_default": "Error changing password!",
-  "profile_edit_task_success": "Changed password to",
-  "profile_edit_task_fail": "Failed to change password with server",
-  "profile_login_username": "Username",
-  "profile_login_confirm": "Login",
-  "profile_login_cancel": "Cancel",
-  "profile_login_task_1": "Getting profile details from server",
-  "profile_login_task_default": "Error connecting to server!",
-  "profile_login_task_success": "Logged in to",
-  "profile_login_task_fail": "Failed getting profile details from server",
-  "profile_remove_text": "Do you really want to delete this Profile? This process cannot be undone.",
-  "profile_remove_confirm": "Delete",
-  "profile_remove_cancel": "Cancel",
-  "profile_remove_task_1": "Deleting profile details from server",
-  "profile_remove_task_default": "Failed deleting profile details from server",
-  "profile_remove_task_success": "Deleted profile",
-  "profile_remove_task_fail": "Error deleting profile from server!",
-  "server_add_name": "Name",
-  "server_add_address": "Address",
-  "server_add_required": "IP is required!",
+  "profile_card_password": "密码保护",
+  "profile_card_login": "登录此个人资料",
+  "profile_card_logout": "退出此个人资料",
+  "profile_card_invalid": "个人资料被标记为无效",
+  "profile_card_edit": "编辑此个人资料",
+  "profile_card_delete": "删除此个人资料",
+  "setting_option_background": "使用背景图像",
+  "setting_option_language": "语言",
+  "setting_load_live": "加载实时设置",
+  "setting_clear_game": "清除游戏设置",
+  "setting_clean_temp": "清理临时文件",
+  "setting_copy_logs": "复制日志",
+  "setting_clear_api": "清除 API 密钥",
+  "setting_load_live_error_1": "无法从实时加载设置",
+  "setting_load_live_error_2": "加载实时设置失败",
+  "setting_load_live_success": "加载实时设置",
+  "setting_clear_game_error_1": "由于未经授权的访问，清除游戏设置失败",
+  "setting_clear_game_error_2": "清除游戏设置失败",
+  "setting_clear_game_success": "清除游戏设置",
+  "setting_clean_temp_error_1": "由于未经授权的访问，无法清理临时文件",
+  "setting_clean_temp_error_2": "无法清理临时文件",
+  "setting_clean_temp_success": "清理临时文件",
+  "setting_copy_logs_error_1": "无法设置带有日志的剪贴板",
+  "setting_copy_logs_success": "已将日志复制到剪贴板",
+  "setting_clear_api_error_1": "无法退出 Forge API",
+  "setting_clear_api_success": "成功退出 Forge API",
+  "profile_add_edition": "版",
+  "profile_add_name": "姓名",
+  "profile_add_confirm": "添加",
+  "profile_add_cancel": "取消",
+  "profile_add_task_1": "将配置文件详细信息添加到服务器",
+  "profile_add_task_default": "连接服务器时出错!",
+  "profile_add_task_success": "添加个人资料",
+  "profile_add_task_fail": "无法将个人资料详细信息添加到服务器",
+  "profile_edit_username": "用户名",
+  "profile_edit_old_pass": "旧密码",
+  "profile_edit_new_pass": "新密码",
+  "profile_edit_confirm": "确认",
+  "profile_edit_cancel": "取消",
+  "profile_edit_task_1": "使用服务器更改密码",
+  "profile_edit_task_default": "更改密码错误!",
+  "profile_edit_task_success": "密码更改为",
+  "profile_edit_task_fail": "无法通过服务器更改密码",
+  "profile_login_username": "用户名",
+  "profile_login_confirm": "登录",
+  "profile_login_cancel": "取消",
+  "profile_login_task_1": "从服务器获取个人资料详细信息",
+  "profile_login_task_default": "连接服务器时出错!",
+  "profile_login_task_success": "登录到",
+  "profile_login_task_fail": "无法从服务器获取个人资料详细信息",
+  "profile_remove_text": "您确实要删除此个人资料吗？此过程无法撤消.",
+  "profile_remove_confirm": "删除",
+  "profile_remove_cancel": "取消",
+  "profile_remove_task_1": "从服务器删除个人资料详细信息",
+  "profile_remove_task_default": "无法从服务器删除个人资料详情",
+  "profile_remove_task_success": "已删除个人资料",
+  "profile_remove_task_fail": "从服务器删除配置文件时出错!",
+  "server_add_name": "姓名",
+  "server_add_address": "地址",
+  "server_add_required": "需要 IP!",
   "server_add_confirm": "Add",
-  "server_add_cancel": "Cancel",
-  "server_add_success": "Added Server!",
-  "server_edit_name": "Name",
-  "server_edit_address": "Address",
-  "server_edit_required": "IP is required!",
-  "server_edit_confirm": "Confirm",
-  "server_edit_cancel": "Cancel",
-  "server_edit_success": "Edited Server!",
-  "server_login_default": "Error connecting to server!",
-  "server_login_cancel": "Cancel",
-  "server_login_success": "Logged in to",
-  "server_login_fail": "Failed logging in to server",
-  "server_login_task_1": "Checking connection to server",
-  "server_login_task_2": "Getting profiles from server",
-  "server_login_task_3": "Getting profile creation data from server",
-  "server_login_task_4": "Getting active mod list from server",
-  "server_login_task_fail_1": "Error getting profiles from server!",
-  "server_login_task_fail_2": "Error getting profile creation data!",
-  "server_login_task_fail_3": "Error getting mod list from server!",
-  "server_login_task_success": "Connected to server!",
-  "server_remove_text": "Do you really want to delete this server? This process cannot be undone.",
-  "server_remove_confirm": "Delete",
-  "server_remove_cancel": "Cancel",
-  "server_remove_submit": "Server removed!",
-  "forge_page_coming": "Forge is coming soon!",
-  "mod_page_coming": "Mod Loader is coming soon!",
-  "profile_page_task_1": "Checking Install",
-  "profile_page_task_1_fail": "Game check failed",
-  "profile_page_task_2": "Patching Game",
-  "profile_page_task_2_fail": "Failed to Patch game",
-  "profile_page_task_3": "Launching Game",
-  "profile_page_task_3_fail": "Game Failed to start",
-  "profile_page_game_closed": "Game has closed"
+  "server_add_cancel": "取消",
+  "server_add_success": "添加服务器!",
+  "server_edit_name": "姓名",
+  "server_edit_address": "地址",
+  "server_edit_required": "需要 IP!",
+  "server_edit_confirm": "确认",
+  "server_edit_cancel": "取消",
+  "server_edit_success": "编辑服务器!",
+  "server_login_default": "连接服务器时出错!",
+  "server_login_cancel": "取消",
+  "server_login_success": "登录到",
+  "server_login_fail": "登录服务器失败",
+  "server_login_task_1": "检查与服务器的连接",
+  "server_login_task_2": "从服务器获取配置文件",
+  "server_login_task_3": "从服务器获取配置文件创建数据",
+  "server_login_task_4": "从服务器获取活动模组列表",
+  "server_login_task_fail_1": "从服务器获取配置文件时出错!",
+  "server_login_task_fail_2": "获取个人资料创建数据时出错!",
+  "server_login_task_fail_3": "从服务器获取模组列表时出错!",
+  "server_login_task_success": "已连接到服务器!",
+  "server_remove_text": "您确实要删除此服务器吗？此过程无法撤消.",
+  "server_remove_confirm": "删除",
+  "server_remove_cancel": "取消",
+  "server_remove_submit": "服务器已移除!",
+  "forge_page_coming": "Forge 即将推出!",
+  "mod_page_coming": "Mod Loader 即将推出!",
+  "profile_page_task_1": "检查安装",
+  "profile_page_task_1_fail": "游戏检查失败",
+  "profile_page_task_2": "修补游戏",
+  "profile_page_task_2_fail": "游戏补丁失败",
+  "profile_page_task_3": "启动游戏",
+  "profile_page_task_3_fail": "游戏启动失败",
+  "profile_page_game_closed": "游戏已关闭"
 }
