--- a/project/SPTarkov.Core/SPT_Data/Launcher/Locales/French.json
+++ b/project/SPTarkov.Core/SPT_Data/Launcher/Locales/French.json
@@ -17,12 +17,12 @@
   "server_card_login": "Login to server",
   "server_card_logout": "Logout of server",
   "server_card_delete": "Delete server",
-  "info_hub_desc": "The current home of SPT",
   "info_forge_desc": "The greatest resource available for Single Player Tarkov modifications.",
   "info_github_desc": "The Github for all SPT related Repositries",
   "info_discord_desc": "The SPT Discord",
   "info_wiki_desc": "Escape From Tarkov Wiki",
   "info_changelog_desc": "Wiki Changelog",
+  "info_translations": "Any Issues with the translations? Please open a PR with the corrections on GitHub",
   "profile_logout": "Logout of Profile",
   "profile_start_game": "Start Game",
   "profiles_disconnect": "Disconnect from server",
