--- a/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Italian.json
+++ b/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Italian.json
@@ -1,142 +1,143 @@
 {
   "ietf_tag": "it",
   "native_name": "Italiano",
-  "page_not_found": "Page not found!",
+  "page_not_found": "Pagina non trovata!",
   "home": "Home",
-  "mod_loader": "Mod Loader",
-  "settings": "Settings",
+  "mod_loader": "Gestore Mod",
+  "settings": "Impostazioni",
   "info": "Info",
-  "home_add_server": "Add New Server",
-  "home_add_server_cta": "Please Add a server using the \"Add New Server\" button above.",
-  "server_card_protect": "Protected from edits",
-  "server_card_edit": "Edit Server",
-  "server_card_name": "Name:",
-  "server_card_address": "Address:",
-  "server_card_connected": "Connected",
-  "server_card_disconnected": "Disconnected",
-  "server_card_login": "Login to server",
-  "server_card_logout": "Logout of server",
-  "server_card_delete": "Delete server",
-  "info_forge_desc": "The greatest resource available for Single Player Tarkov modifications.",
-  "info_github_desc": "The Github for all SPT related Repositries",
-  "info_discord_desc": "The SPT Discord",
-  "info_wiki_desc": "Escape From Tarkov Wiki",
-  "info_changelog_desc": "Wiki Changelog",
-  "info_translations": "Any Issues with the translations? Please open a PR with the corrections on GitHub",
-  "profile_logout": "Logout of Profile",
-  "profile_start_game": "Start Game",
-  "profiles_disconnect": "Disconnect from server",
-  "profiles_create": "Create new profile",
-  "profiles_login": "Login with details",
-  "profiles_empty_warning": "Server has no profiles yet or does not show them. Please create a new profile or login with details.",
-  "profiles_connect_warning": "Please connect to a Server first!",
-  "setting_close": "Close To Tray",
-  "setting_minimize": "Minimize On Game Start",
-  "setting_always_top": "Always On Top",
-  "game_helper_error_1": "SPT is installed in Live",
-  "game_helper_error_2": "Core dll mismatch",
-  "game_helper_error_3": "Game Validation Failed",
-  "game_helper_error_4": "Patching failed",
-  "game_helper_error_5": "Could not find EscapeFromTarkov.exe",
-  "game_helper_error_6": "Starting game process failed",
-  "info_card_name": "Name",
-  "info_card_desc": "Description",
-  "profile_card_name": "Name",
-  "profile_card_level": "Level",
-  "profile_card_edition": "Edition",
+  "request_timed_out": "Richiesta scaduta!",
+  "home_add_server": "Aggiungi Nuovo Server",
+  "home_add_server_cta": "Aggiungi un server utilizzando il pulsante \"Aggiungi Nuovo Server\" qui sopra.",
+  "server_card_protect": "Protetto dalle modifiche",
+  "server_card_edit": "Modifica Server",
+  "server_card_name": "Nome:",
+  "server_card_address": "Indirizzo:",
+  "server_card_connected": "Connesso",
+  "server_card_disconnected": "Disconnesso",
+  "server_card_login": "Accedi al server",
+  "server_card_logout": "Esci dal server",
+  "server_card_delete": "Elimina server",
+  "info_forge_desc": "La più grande risorsa disponibile per le modifiche di Single Player Tarkov.",
+  "info_github_desc": "Il Github per tutti i Repository relativi a SPT",
+  "info_discord_desc": "Il Discord di SPT",
+  "info_wiki_desc": "Wiki di Escape From Tarkov",
+  "info_changelog_desc": "Changelog Wiki",
+  "info_translations": "Problemi con le traduzioni? Apri una PR con le correzioni su GitHub",
+  "profile_logout": "Esci dal Profilo",
+  "profile_start_game": "Avvia Gioco",
+  "profiles_disconnect": "Disconnetti dal server",
+  "profiles_create": "Crea nuovo profilo",
+  "profiles_login": "Accedi con le credenziali",
+  "profiles_empty_warning": "Il server non ha ancora profili o non li mostra. Crea un nuovo profilo o accedi con le credenziali.",
+  "profiles_connect_warning": "Connettiti prima a un Server!",
+  "setting_close": "Chiudi nella barra delle applicazioni",
+  "setting_minimize": "Minimizza all'avvio del gioco",
+  "setting_always_top": "Sempre in primo piano",
+  "game_helper_error_1": "SPT è installato in Live",
+  "game_helper_error_2": "Dll core non corrispondente",
+  "game_helper_error_3": "Validazione del gioco fallita",
+  "game_helper_error_4": "Patching fallito",
+  "game_helper_error_5": "Impossibile trovare EscapeFromTarkov.exe",
+  "game_helper_error_6": "Avvio del processo di gioco fallito",
+  "info_card_name": "Nome",
+  "info_card_desc": "Descrizione",
+  "profile_card_name": "Nome",
+  "profile_card_level": "Livello",
+  "profile_card_edition": "Edizione",
   "profile_card_id": "ID",
-  "profile_card_password": "Password Protected",
-  "profile_card_login": "Login to this profile",
-  "profile_card_logout": "Logout of this profile",
-  "profile_card_invalid": "Profile is marked as Invalid",
-  "profile_card_edit": "Edit this profile",
-  "profile_card_delete": "Delete this profile",
-  "setting_option_background": "Use Background Image",
-  "setting_option_language": "Language",
-  "setting_load_live": "Load Live Settings",
-  "setting_clear_game": "Clear Game Settings",
-  "setting_clean_temp": "Clean Temp Files",
-  "setting_copy_logs": "Copy Logs",
-  "setting_clear_api": "Clear ApiKey",
-  "setting_load_live_error_1": "Settings can not be loaded from live",
-  "setting_load_live_error_2": "Loading live settings failed",
-  "setting_load_live_success": "Loaded live settings",
-  "setting_clear_game_error_1": "Clearing game settings failed due to Unauthorized Access",
-  "setting_clear_game_error_2": "Clearing game settings failed",
-  "setting_clear_game_success": "Cleared game settings",
-  "setting_clean_temp_error_1": "Unable to clean temp files due to Unauthorized Access",
-  "setting_clean_temp_error_2": "Unable to clean temp files",
-  "setting_clean_temp_success": "Cleaned temp files",
-  "setting_copy_logs_error_1": "Unable to set clipboard with logs",
-  "setting_copy_logs_success": "Copied logs to clipboard",
-  "setting_clear_api_error_1": "Unable to logout of Forge API",
-  "setting_clear_api_success": "Successfully logged out of Forge API",
-  "profile_add_edition": "Edition",
-  "profile_add_name": "Name",
-  "profile_add_confirm": "Add",
-  "profile_add_cancel": "Cancel",
-  "profile_add_task_1": "Adding profile details to server",
-  "profile_add_task_default": "Error connecting to server!",
-  "profile_add_task_success": "Added profile",
-  "profile_add_task_fail": "Failed adding profile details to server",
-  "profile_edit_username": "Username",
-  "profile_edit_old_pass": "Old password",
-  "profile_edit_new_pass": "New password",
-  "profile_edit_confirm": "Confirm",
-  "profile_edit_cancel": "Cancel",
-  "profile_edit_task_1": "Changing password with server",
-  "profile_edit_task_default": "Error changing password!",
-  "profile_edit_task_success": "Changed password to",
-  "profile_edit_task_fail": "Failed to change password with server",
-  "profile_login_username": "Username",
-  "profile_login_confirm": "Login",
-  "profile_login_cancel": "Cancel",
-  "profile_login_task_1": "Getting profile details from server",
-  "profile_login_task_default": "Error connecting to server!",
-  "profile_login_task_success": "Logged in to",
-  "profile_login_task_fail": "Failed getting profile details from server",
-  "profile_remove_text": "Do you really want to delete this Profile? This process cannot be undone.",
-  "profile_remove_confirm": "Delete",
-  "profile_remove_cancel": "Cancel",
-  "profile_remove_task_1": "Deleting profile details from server",
-  "profile_remove_task_default": "Failed deleting profile details from server",
-  "profile_remove_task_success": "Deleted profile",
-  "profile_remove_task_fail": "Error deleting profile from server!",
-  "server_add_name": "Name",
-  "server_add_address": "Address",
-  "server_add_required": "IP is required!",
-  "server_add_confirm": "Add",
-  "server_add_cancel": "Cancel",
-  "server_add_success": "Added Server!",
-  "server_edit_name": "Name",
-  "server_edit_address": "Address",
-  "server_edit_required": "IP is required!",
-  "server_edit_confirm": "Confirm",
-  "server_edit_cancel": "Cancel",
-  "server_edit_success": "Edited Server!",
-  "server_login_default": "Error connecting to server!",
-  "server_login_cancel": "Cancel",
-  "server_login_success": "Logged in to",
-  "server_login_fail": "Failed logging in to server",
-  "server_login_task_1": "Checking connection to server",
-  "server_login_task_2": "Getting profiles from server",
-  "server_login_task_3": "Getting profile creation data from server",
-  "server_login_task_4": "Getting active mod list from server",
-  "server_login_task_fail_1": "Error getting profiles from server!",
-  "server_login_task_fail_2": "Error getting profile creation data!",
-  "server_login_task_fail_3": "Error getting mod list from server!",
-  "server_login_task_success": "Connected to server!",
-  "server_remove_text": "Do you really want to delete this server? This process cannot be undone.",
-  "server_remove_confirm": "Delete",
-  "server_remove_cancel": "Cancel",
-  "server_remove_submit": "Server removed!",
-  "forge_page_coming": "Forge is coming soon!",
-  "mod_page_coming": "Mod Loader is coming soon!",
-  "profile_page_task_1": "Checking Install",
-  "profile_page_task_1_fail": "Game check failed",
-  "profile_page_task_2": "Patching Game",
-  "profile_page_task_2_fail": "Failed to Patch game",
-  "profile_page_task_3": "Launching Game",
-  "profile_page_task_3_fail": "Game Failed to start",
-  "profile_page_game_closed": "Game has closed"
+  "profile_card_password": "Protetto da password",
+  "profile_card_login": "Accedi a questo profilo",
+  "profile_card_logout": "Esci da questo profilo",
+  "profile_card_invalid": "Il profilo è contrassegnato come non valido",
+  "profile_card_edit": "Modifica questo profilo",
+  "profile_card_delete": "Elimina questo profilo",
+  "setting_option_background": "Usa immagine di sfondo",
+  "setting_option_language": "Lingua",
+  "setting_load_live": "Carica impostazioni Live",
+  "setting_clear_game": "Cancella impostazioni gioco",
+  "setting_clean_temp": "Pulisci file temporanei",
+  "setting_copy_logs": "Copia log",
+  "setting_clear_api": "Cancella ApiKey",
+  "setting_load_live_error_1": "Le impostazioni non possono essere caricate da live",
+  "setting_load_live_error_2": "Caricamento impostazioni live fallito",
+  "setting_load_live_success": "Impostazioni live caricate",
+  "setting_clear_game_error_1": "Cancellazione impostazioni gioco fallita per accesso non autorizzato",
+  "setting_clear_game_error_2": "Cancellazione impostazioni gioco fallita",
+  "setting_clear_game_success": "Impostazioni gioco cancellate",
+  "setting_clean_temp_error_1": "Impossibile pulire i file temporanei per accesso non autorizzato",
+  "setting_clean_temp_error_2": "Impossibile pulire i file temporanei",
+  "setting_clean_temp_success": "File temporanei puliti",
+  "setting_copy_logs_error_1": "Impossibile copiare i log negli appunti",
+  "setting_copy_logs_success": "Log copiati negli appunti",
+  "setting_clear_api_error_1": "Impossibile disconnettersi dall'API Forge",
+  "setting_clear_api_success": "Disconnessione dall'API Forge riuscita",
+  "profile_add_edition": "Edizione",
+  "profile_add_name": "Nome",
+  "profile_add_confirm": "Aggiungi",
+  "profile_add_cancel": "Annulla",
+  "profile_add_task_1": "Aggiunta dettagli profilo al server",
+  "profile_add_task_default": "Errore di connessione al server!",
+  "profile_add_task_success": "Profilo aggiunto",
+  "profile_add_task_fail": "Impossibile aggiungere i dettagli del profilo al server",
+  "profile_edit_username": "Nome utente",
+  "profile_edit_old_pass": "Vecchia password",
+  "profile_edit_new_pass": "Nuova password",
+  "profile_edit_confirm": "Conferma",
+  "profile_edit_cancel": "Annulla",
+  "profile_edit_task_1": "Modifica password sul server",
+  "profile_edit_task_default": "Errore modifica password!",
+  "profile_edit_task_success": "Password modificata in",
+  "profile_edit_task_fail": "Impossibile modificare la password sul server",
+  "profile_login_username": "Nome utente",
+  "profile_login_confirm": "Accedi",
+  "profile_login_cancel": "Annulla",
+  "profile_login_task_1": "Recupero dettagli profilo dal server",
+  "profile_login_task_default": "Errore di connessione al server!",
+  "profile_login_task_success": "Accesso effettuato a",
+  "profile_login_task_fail": "Impossibile recuperare i dettagli del profilo dal server",
+  "profile_remove_text": "Vuoi davvero eliminare questo profilo? Questa operazione non può essere annullata.",
+  "profile_remove_confirm": "Elimina",
+  "profile_remove_cancel": "Annulla",
+  "profile_remove_task_1": "Eliminazione dettagli profilo dal server",
+  "profile_remove_task_default": "Impossibile eliminare i dettagli del profilo dal server",
+  "profile_remove_task_success": "Profilo eliminato",
+  "profile_remove_task_fail": "Errore nell'eliminazione del profilo dal server!",
+  "server_add_name": "Nome",
+  "server_add_address": "Indirizzo",
+  "server_add_required": "IP richiesto!",
+  "server_add_confirm": "Aggiungi",
+  "server_add_cancel": "Annulla",
+  "server_add_success": "Server aggiunto!",
+  "server_edit_name": "Nome",
+  "server_edit_address": "Indirizzo",
+  "server_edit_required": "IP richiesto!",
+  "server_edit_confirm": "Conferma",
+  "server_edit_cancel": "Annulla",
+  "server_edit_success": "Server modificato!",
+  "server_login_default": "Errore di connessione al server!",
+  "server_login_cancel": "Annulla",
+  "server_login_success": "Accesso effettuato a",
+  "server_login_fail": "Accesso al server fallito",
+  "server_login_task_1": "Verifica connessione al server",
+  "server_login_task_2": "Recupero profili dal server",
+  "server_login_task_3": "Recupero dati creazione profilo dal server",
+  "server_login_task_4": "Recupero lista mod attive dal server",
+  "server_login_task_fail_1": "Errore nel recupero dei profili dal server!",
+  "server_login_task_fail_2": "Errore nel recupero dei dati di creazione profilo!",
+  "server_login_task_fail_3": "Errore nel recupero della lista mod dal server!",
+  "server_login_task_success": "Connesso al server!",
+  "server_remove_text": "Vuoi davvero eliminare questo server? Questa operazione non può essere annullata.",
+  "server_remove_confirm": "Elimina",
+  "server_remove_cancel": "Annulla",
+  "server_remove_submit": "Server eliminato!",
+  "forge_page_coming": "Forge arriverà presto!",
+  "mod_page_coming": "Il Gestore Mod arriverà presto!",
+  "profile_page_task_1": "Verifica installazione",
+  "profile_page_task_1_fail": "Verifica del gioco fallita",
+  "profile_page_task_2": "Patching del gioco",
+  "profile_page_task_2_fail": "Patching del gioco fallito",
+  "profile_page_task_3": "Avvio del gioco",
+  "profile_page_task_3_fail": "Avvio del gioco fallito",
+  "profile_page_game_closed": "Il gioco è stato chiuso"
 }
