--- a/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Chinese (Traditional).json
+++ b/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Chinese (Traditional).json
@@ -1,142 +1,143 @@
 {
   "ietf_tag": "zh-hant",
   "native_name": "繁體中文",
-  "page_not_found": "Page not found!",
-  "home": "Home",
-  "mod_loader": "Mod Loader",
-  "settings": "Settings",
-  "info": "Info",
-  "home_add_server": "Add New Server",
-  "home_add_server_cta": "Please Add a server using the \"Add New Server\" button above.",
-  "server_card_protect": "Protected from edits",
-  "server_card_edit": "Edit Server",
-  "server_card_name": "Name:",
-  "server_card_address": "Address:",
-  "server_card_connected": "Connected",
-  "server_card_disconnected": "Disconnected",
-  "server_card_login": "Login to server",
-  "server_card_logout": "Logout of server",
-  "server_card_delete": "Delete server",
-  "info_forge_desc": "The greatest resource available for Single Player Tarkov modifications.",
-  "info_github_desc": "The Github for all SPT related Repositries",
-  "info_discord_desc": "The SPT Discord",
+  "page_not_found": "頁面未找到！",
+  "home": "家",
+  "mod_loader": "模組載入器",
+  "settings": "設定",
+  "info": "資訊",
+  "request_timed_out": "請求超時！",
+  "home_add_server": "新增伺服器",
+  "home_add_server_cta": "請使用上面的“新增伺服器”按鈕新增伺服器。",
+  "server_card_protect": "禁止編輯",
+  "server_card_edit": "編輯伺服器",
+  "server_card_name": "姓名:",
+  "server_card_address": "地址:",
+  "server_card_connected": "已連接",
+  "server_card_disconnected": "斷開連接",
+  "server_card_login": "登入伺服器",
+  "server_card_logout": "退出伺服器",
+  "server_card_delete": "刪除伺服器",
+  "info_forge_desc": "單人塔科夫修改可用的最豐富的資源。",
+  "info_github_desc": "所有 SPT 相關儲存庫的 Github",
+  "info_discord_desc": "SPT Discord",
   "info_wiki_desc": "Escape From Tarkov Wiki",
   "info_changelog_desc": "Wiki Changelog",
-  "info_translations": "Any Issues with the translations? Please open a PR with the corrections on GitHub",
-  "profile_logout": "Logout of Profile",
-  "profile_start_game": "Start Game",
-  "profiles_disconnect": "Disconnect from server",
-  "profiles_create": "Create new profile",
-  "profiles_login": "Login with details",
-  "profiles_empty_warning": "Server has no profiles yet or does not show them. Please create a new profile or login with details.",
-  "profiles_connect_warning": "Please connect to a Server first!",
-  "setting_close": "Close To Tray",
-  "setting_minimize": "Minimize On Game Start",
-  "setting_always_top": "Always On Top",
-  "game_helper_error_1": "SPT is installed in Live",
-  "game_helper_error_2": "Core dll mismatch",
-  "game_helper_error_3": "Game Validation Failed",
-  "game_helper_error_4": "Patching failed",
-  "game_helper_error_5": "Could not find EscapeFromTarkov.exe",
-  "game_helper_error_6": "Starting game process failed",
-  "info_card_name": "Name",
-  "info_card_desc": "Description",
-  "profile_card_name": "Name",
-  "profile_card_level": "Level",
-  "profile_card_edition": "Edition",
+  "info_translations": "翻譯有問題嗎？請在 GitHub 上提交更正請求。",
+  "profile_logout": "退出個人資料",
+  "profile_start_game": "開始遊戲",
+  "profiles_disconnect": "斷開與伺服器的連接",
+  "profiles_create": "建立新的個人資料",
+  "profiles_login": "使用詳細資訊登入",
+  "profiles_empty_warning": "伺服器尚無個人資料或未顯示個人資料。請建立新的個人資料或使用詳細資訊登入。",
+  "profiles_connect_warning": "請先連接到伺服器！",
+  "setting_close": "靠近托盤",
+  "setting_minimize": "遊戲開始時最小化",
+  "setting_always_top": "始終處於領先地位",
+  "game_helper_error_1": "SPT 安裝在 Live 中",
+  "game_helper_error_2": "核心 dll 不匹配",
+  "game_helper_error_3": "遊戲驗證失敗",
+  "game_helper_error_4": "修補失敗",
+  "game_helper_error_5": "找不到 EscapeFromTarkov.exe",
+  "game_helper_error_6": "啟動遊戲失敗",
+  "info_card_name": "姓名",
+  "info_card_desc": "描述",
+  "profile_card_name": "姓名",
+  "profile_card_level": "等級",
+  "profile_card_edition": "版",
   "profile_card_id": "ID",
-  "profile_card_password": "Password Protected",
-  "profile_card_login": "Login to this profile",
-  "profile_card_logout": "Logout of this profile",
-  "profile_card_invalid": "Profile is marked as Invalid",
-  "profile_card_edit": "Edit this profile",
-  "profile_card_delete": "Delete this profile",
-  "setting_option_background": "Use Background Image",
-  "setting_option_language": "Language",
-  "setting_load_live": "Load Live Settings",
-  "setting_clear_game": "Clear Game Settings",
-  "setting_clean_temp": "Clean Temp Files",
-  "setting_copy_logs": "Copy Logs",
-  "setting_clear_api": "Clear ApiKey",
-  "setting_load_live_error_1": "Settings can not be loaded from live",
-  "setting_load_live_error_2": "Loading live settings failed",
-  "setting_load_live_success": "Loaded live settings",
-  "setting_clear_game_error_1": "Clearing game settings failed due to Unauthorized Access",
-  "setting_clear_game_error_2": "Clearing game settings failed",
-  "setting_clear_game_success": "Cleared game settings",
-  "setting_clean_temp_error_1": "Unable to clean temp files due to Unauthorized Access",
-  "setting_clean_temp_error_2": "Unable to clean temp files",
-  "setting_clean_temp_success": "Cleaned temp files",
-  "setting_copy_logs_error_1": "Unable to set clipboard with logs",
-  "setting_copy_logs_success": "Copied logs to clipboard",
-  "setting_clear_api_error_1": "Unable to logout of Forge API",
-  "setting_clear_api_success": "Successfully logged out of Forge API",
-  "profile_add_edition": "Edition",
-  "profile_add_name": "Name",
-  "profile_add_confirm": "Add",
-  "profile_add_cancel": "Cancel",
-  "profile_add_task_1": "Adding profile details to server",
-  "profile_add_task_default": "Error connecting to server!",
-  "profile_add_task_success": "Added profile",
-  "profile_add_task_fail": "Failed adding profile details to server",
-  "profile_edit_username": "Username",
-  "profile_edit_old_pass": "Old password",
-  "profile_edit_new_pass": "New password",
-  "profile_edit_confirm": "Confirm",
-  "profile_edit_cancel": "Cancel",
-  "profile_edit_task_1": "Changing password with server",
-  "profile_edit_task_default": "Error changing password!",
-  "profile_edit_task_success": "Changed password to",
-  "profile_edit_task_fail": "Failed to change password with server",
-  "profile_login_username": "Username",
-  "profile_login_confirm": "Login",
-  "profile_login_cancel": "Cancel",
-  "profile_login_task_1": "Getting profile details from server",
-  "profile_login_task_default": "Error connecting to server!",
-  "profile_login_task_success": "Logged in to",
-  "profile_login_task_fail": "Failed getting profile details from server",
-  "profile_remove_text": "Do you really want to delete this Profile? This process cannot be undone.",
-  "profile_remove_confirm": "Delete",
-  "profile_remove_cancel": "Cancel",
-  "profile_remove_task_1": "Deleting profile details from server",
-  "profile_remove_task_default": "Failed deleting profile details from server",
-  "profile_remove_task_success": "Deleted profile",
-  "profile_remove_task_fail": "Error deleting profile from server!",
-  "server_add_name": "Name",
-  "server_add_address": "Address",
-  "server_add_required": "IP is required!",
-  "server_add_confirm": "Add",
-  "server_add_cancel": "Cancel",
-  "server_add_success": "Added Server!",
-  "server_edit_name": "Name",
-  "server_edit_address": "Address",
-  "server_edit_required": "IP is required!",
-  "server_edit_confirm": "Confirm",
-  "server_edit_cancel": "Cancel",
-  "server_edit_success": "Edited Server!",
-  "server_login_default": "Error connecting to server!",
-  "server_login_cancel": "Cancel",
-  "server_login_success": "Logged in to",
-  "server_login_fail": "Failed logging in to server",
-  "server_login_task_1": "Checking connection to server",
-  "server_login_task_2": "Getting profiles from server",
-  "server_login_task_3": "Getting profile creation data from server",
-  "server_login_task_4": "Getting active mod list from server",
-  "server_login_task_fail_1": "Error getting profiles from server!",
-  "server_login_task_fail_2": "Error getting profile creation data!",
-  "server_login_task_fail_3": "Error getting mod list from server!",
-  "server_login_task_success": "Connected to server!",
-  "server_remove_text": "Do you really want to delete this server? This process cannot be undone.",
-  "server_remove_confirm": "Delete",
-  "server_remove_cancel": "Cancel",
-  "server_remove_submit": "Server removed!",
-  "forge_page_coming": "Forge is coming soon!",
-  "mod_page_coming": "Mod Loader is coming soon!",
-  "profile_page_task_1": "Checking Install",
-  "profile_page_task_1_fail": "Game check failed",
-  "profile_page_task_2": "Patching Game",
-  "profile_page_task_2_fail": "Failed to Patch game",
-  "profile_page_task_3": "Launching Game",
-  "profile_page_task_3_fail": "Game Failed to start",
-  "profile_page_game_closed": "Game has closed"
+  "profile_card_password": "密碼保護",
+  "profile_card_login": "登入此個人資料",
+  "profile_card_logout": "退出此個人資料",
+  "profile_card_invalid": "個人資料被標記為無效",
+  "profile_card_edit": "編輯此個人資料",
+  "profile_card_delete": "刪除此個人資料",
+  "setting_option_background": "使用背景影像",
+  "setting_option_language": "語言",
+  "setting_load_live": "載入即時設定",
+  "setting_clear_game": "清除遊戲設定",
+  "setting_clean_temp": "清理臨時文件",
+  "setting_copy_logs": "複製日誌",
+  "setting_clear_api": "清除 API 金鑰",
+  "setting_load_live_error_1": "無法從即時加載設置",
+  "setting_load_live_error_2": "載入即時設定失敗",
+  "setting_load_live_success": "載入即時設定",
+  "setting_clear_game_error_1": "由於未經授權的訪問，清除遊戲設定失敗",
+  "setting_clear_game_error_2": "清除遊戲設定失敗",
+  "setting_clear_game_success": "清除遊戲設定",
+  "setting_clean_temp_error_1": "由於未經授權的訪問，無法清理臨時文件",
+  "setting_clean_temp_error_2": "無法清理臨時文件",
+  "setting_clean_temp_success": "清理臨時文件",
+  "setting_copy_logs_error_1": "無法設定帶有日誌的剪貼簿",
+  "setting_copy_logs_success": "已將日誌複製到剪貼簿",
+  "setting_clear_api_error_1": "無法退出 Forge API",
+  "setting_clear_api_success": "成功退出 Forge API",
+  "profile_add_edition": "版",
+  "profile_add_name": "姓名",
+  "profile_add_confirm": "添加",
+  "profile_add_cancel": "取消",
+  "profile_add_task_1": "將設定檔詳細資訊新增至伺服器",
+  "profile_add_task_default": "連接伺服器錯誤！",
+  "profile_add_task_success": "新增個人資料",
+  "profile_add_task_fail": "無法將個人資料詳細資料新增至伺服器",
+  "profile_edit_username": "使用者名稱",
+  "profile_edit_old_pass": "舊密碼",
+  "profile_edit_new_pass": "新密碼",
+  "profile_edit_confirm": "確認",
+  "profile_edit_cancel": "取消",
+  "profile_edit_task_1": "使用伺服器更改密碼",
+  "profile_edit_task_default": "修改密碼錯誤！",
+  "profile_edit_task_success": "密碼更改為",
+  "profile_edit_task_fail": "無法透過伺服器更改密碼",
+  "profile_login_username": "使用者名稱",
+  "profile_login_confirm": "登入",
+  "profile_login_cancel": "取消",
+  "profile_login_task_1": "從伺服器取得個人資料詳細信息",
+  "profile_login_task_default": "連接伺服器錯誤！",
+  "profile_login_task_success": "登入",
+  "profile_login_task_fail": "無法從伺服器取得個人資料詳細信息",
+  "profile_remove_text": "您確實要刪除此個人資料嗎？此過程無法撤銷。",
+  "profile_remove_confirm": "刪除",
+  "profile_remove_cancel": "取消",
+  "profile_remove_task_1": "從伺服器刪除個人資料詳細信息",
+  "profile_remove_task_default": "無法從伺服器刪除個人資料詳情",
+  "profile_remove_task_success": "已刪除個人資料",
+  "profile_remove_task_fail": "從伺服器刪除設定檔時出錯！",
+  "server_add_name": "姓名",
+  "server_add_address": "地址",
+  "server_add_required": "需要 IP！",
+  "server_add_confirm": "添加",
+  "server_add_cancel": "取消",
+  "server_add_success": "已新增伺服器！",
+  "server_edit_name": "姓名",
+  "server_edit_address": "地址",
+  "server_edit_required": "需要 IP！",
+  "server_edit_confirm": "確認",
+  "server_edit_cancel": "取消",
+  "server_edit_success": "已編輯伺服器！",
+  "server_login_default": "連接伺服器錯誤！",
+  "server_login_cancel": "取消",
+  "server_login_success": "登入",
+  "server_login_fail": "登入伺服器失敗",
+  "server_login_task_1": "檢查與伺服器的連接",
+  "server_login_task_2": "從伺服器取得設定檔",
+  "server_login_task_3": "從伺服器取得設定檔建立數據",
+  "server_login_task_4": "從伺服器取得活動模組列表",
+  "server_login_task_fail_1": "從伺服器取得設定檔時出錯！",
+  "server_login_task_fail_2": "取得個人資料建立資料時出錯！",
+  "server_login_task_fail_3": "從伺服器取得模組列表時出錯！",
+  "server_login_task_success": "已連接到伺服器！",
+  "server_remove_text": "您確實要刪除此伺服器嗎？此過程無法撤銷。",
+  "server_remove_confirm": "刪除",
+  "server_remove_cancel": "取消",
+  "server_remove_submit": "伺服器已移除！",
+  "forge_page_coming": "Forge 即將推出！",
+  "mod_page_coming": "Mod Loader 即將推出！",
+  "profile_page_task_1": "檢查安裝",
+  "profile_page_task_1_fail": "遊戲檢查失敗",
+  "profile_page_task_2": "修補遊戲",
+  "profile_page_task_2_fail": "遊戲補丁失敗",
+  "profile_page_task_3": "啟動遊戲",
+  "profile_page_task_3_fail": "遊戲啟動失敗",
+  "profile_page_game_closed": "遊戲已關閉"
 }
